tests/type_errors/binding_annotation_mismatch.nos
# expect_error: type mismatch
# Top-level binding with return type annotation mismatch
f: () -> Int = () => "hello"
main() = 0
